# todolist_fastapi_nextj_sqlmodel

todo-core-apis/: .env  Dockerfile  pyproject.toml
todo-core-apis/tests/: test_main.py
todo-core-apis/todo_core_apis/: authorization.py  database.py  main.py  models.py  todo_actions.py
todo-core-apis/todo_core_apis/routers/: auth.py
todo_ui/: package-lock.json  package.json
todo_ui/src/app/: page.tsx
todo_ui/src/app/api/getTodoList/: route.ts
todo_ui/src/app/components/: TodoList.tsx
