[tool.poetry]
name = "todo-core-apis"
version = "0.1.0"
description = ""
authors = ["usmanashrf <usmanashraf1510@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
sqlmodel = "^0.0.16"
psycopg = {extras = ["binary"], version = "^3.1.18"}
requests = "^2.31.0"
pytest = "^8.1.1"
httpx = "^0.27.0"
jwt = "^1.3.1"
passlib = "^1.7.4"
psycopg2-binary = "^2.9.9"
bcrypt = "^4.1.2"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
